# api/src/main/kotlin/com/massimo/cookbookbe/controller/IngredientController.kt
@@ -6,6 +6,7 @@ import com.massimo.cookbookbe.mapper.IngredientMapper
 import com.massimo.cookbookbe.model.Category
 import com.massimo.cookbookbe.model.CreateIngredientCommand
 import com.massimo.cookbookbe.model.Ingredient
+import com.massimo.cookbookbe.model.UpdateIngredientInfoCommand
 import com.massimo.cookbookbe.ports.primary.IngredientService
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
@@ -19,8 +20,8 @@ class IngredientController (
     private val mapper: IngredientMapper
 ) : IngredientApi {
 
-    @GetMapping("/ingredients")
-    override fun findAll(
+    @GetMapping("/ingredient")
+    override fun findAllIngredients(
         @RequestParam(required = false, value = "name") name: String?,
         @RequestParam(required = false, value = "category") category: Category?,
         @RequestParam(required = false, value = "order") order: String?,
@@ -40,7 +41,7 @@ class IngredientController (
     }
 
     @GetMapping("/ingredient/{id}")
-    override fun findById(
+    override fun findIngredientById(
         @PathVariable id: Long
     ): ResponseEntity<Ingredient> {
 
@@ -62,7 +63,7 @@ class IngredientController (
     @PutMapping("/ingredient/{id}")
     override fun updateIngredient(
         @PathVariable id: Long,
-        @Valid @RequestBody updateIngredientInfoCommand: com.massimo.cookbookbe.model.UpdateIngredientInfoCommand
+        @Valid @RequestBody updateIngredientInfoCommand: UpdateIngredientInfoCommand
     ): ResponseEntity<Long> {
 
         val ingredientToUpdate = mapper.map(updateIngredientInfoCommand)
